# access-control-system

./: .gitignore  README.md  build  build-all  docker-compose.yml  upload-all
mod_auth/: .dockerignore  .gitignore  CMakeLists-Prod.txt  CMakeLists.txt  Dockerfile  build  build-image  upload-image
mod_auth/src/: hello_world.cpp
mod_auth/src/api/: authentication_api.cc  authentication_api.h  authentication_request.cc  authentication_request.h  authentication_response.cc  authentication_response.h  message.h  secret_holder.h
mod_auth/src/app/: hello_world.cpp  main.cc  modules.cc  modules.h
mod_auth/src/comm/: deserializer.cc  deserializer.h  zmq_handler.cc
mod_auth/src/comm/dispatcher/: dispatcher.cc  dispatcher.h
mod_auth/src/comm/network/: network_handler.cc  network_handler.h  zmq_handler.cc  zmq_handler.h
mod_auth/src/comm/ser_des/: ser_des.cc  ser_des.h  ser_des_factory.cc  ser_des_factory.h
mod_auth/src/comm/ser_des/json/: converters.cc  converters.h  json_ser_des.cc  json_ser_des.h
mod_auth/src/service/: credential_store.h  secret_holder.h
mod_auth/src/service/rfid/: credential_store_rfid.cc  credential_store_rfid.h  secret_holder_rfid.cc  secret_holder_rfid.h
mod_auth/src/service/user_password/: credential_validator_user_password.cc  credential_validator_user_password.h  secret_holder_user_password.cc  secret_holder_user_password.h  user_password.cc  user_password.h
mod_auth/src/util/: except.h
mod_auth/test/api/: main.cc
mod_auth/test/comm/: deserializer_json_test.cc  deserializer_test.cc
mod_comm/: .dockerignore  CMakeLists.txt  Dockerfile  build-image  upload-image
mod_comm/src/: hello_world.cpp
mod_comm/src/app/: hello_world.cpp
mod_database/: CMakeLists.txt  Dockerfile  build-image  upload-image
mod_database/src/: hello_world.cpp
mod_database/src/app/: hello_world.cpp
mod_driver/: CMakeLists.txt  Dockerfile  build-image  upload-image
mod_driver/src/: hello_world.cpp
mod_driver/src/app/: hello_world.cpp
scripts/: build-image  upload-image
scripts/raspbian/: configure-avahi  install-salt-minion
scripts/raspbian/docker/: daemon.json  install-docker  install-docker-compose
tools/builder/: Dockerfile  build
tools/builder/tools/: build-app
tools/builder/tools/toolchains/: README
tools/builder/tools/toolchains/toolchains-cmake-files/: toolchain-arm32v7.cmake  toolchain-rpi.cmake
tools/runner/arm32v7/: Dockerfile  build
tools/runner/arm32v7/tools/: register-libs
