cmake_minimum_required (VERSION 3.0)

PROJECT(mod_auth)

# Linking
SET(LIBRARIES_LIST
		"zmq"
		"czmq"
	 )

## ZMQ
SET(ZMQ_PREFIX "/root/deps/zmq")
INCLUDE_DIRECTORIES(SYSTEM ${ZMQ_PREFIX}/include)
ADD_LIBRARY(zmq SHARED IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(zmq PROPERTIES IMPORTED_LOCATION "${ZMQ_PREFIX}/lib/libzmq.so")

SET(CZMQ_PREFIX "/root/deps/czmq")
INCLUDE_DIRECTORIES(SYSTEM ${CZMQ_PREFIX}/include)
ADD_LIBRARY(czmq SHARED IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(czmq PROPERTIES IMPORTED_LOCATION "${CZMQ_PREFIX}/lib/libczmq.so")


# Create binary
## Finding application .cpp sources
FILE(GLOB_RECURSE SRC_FILES src/*.cpp)

ADD_EXECUTABLE(mod_auth ${SRC_FILES})
SET_TARGET_PROPERTIES(
	mod_auth
	PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY bin/
	OUTPUT_NAME mod_auth.run
	)

TARGET_LINK_LIBRARIES(mod_auth ${LIBRARIES_LIST})
